# gap

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
gap/: __main__.py  bootstrap.py  cli.py  generator.py  toml_parser.py
tests/: generated_syntax_tests.py  test_generator.py
