[metadata]
name = gap
version = 1.0.3
description = Generated argument parser
long_description = file: README.md
license = GPL
author = Dominic Ricottone
author_email = me@dominic-ricottone.com
url = git.dominic-ricottone.com/~dricottone/gap

[options]
packages = gap
python_requires = >= 3.6
install_requires =
    toml >= 0.10.2

[options.entry_points]
console_scripts =
    gap = gap.__main__:main

